--- a/calibration.ipynb
+++ b/calibration.ipynb
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 235,
    "id": "dfd5121d",
    "metadata": {},
    "outputs": [],
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 236,
    "id": "3514b63e",
    "metadata": {},
    "outputs": [],
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 237,
    "id": "621ad3a6",
    "metadata": {},
    "outputs": [],
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 238,
    "id": "20f2abd3",
    "metadata": {},
    "outputs": [
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 239,
    "id": "837764b4",
    "metadata": {},
    "outputs": [
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 240,
    "id": "fa97794b",
    "metadata": {},
    "outputs": [
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 241,
    "id": "eeee6c25-668d-45a4-a7c0-be19c98b258d",
    "metadata": {},
    "outputs": [
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 242,
    "id": "3710e5c0-66c5-4ae4-a3ca-1ff4ef351477",
    "metadata": {},
    "outputs": [
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 243,
    "id": "420f1d2a",
    "metadata": {},
    "outputs": [],
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 244,
    "id": "5ddb1c15",
    "metadata": {},
    "outputs": [],
@@ -351,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 245,
    "id": "4a25860f",
    "metadata": {},
    "outputs": [],
@@ -382,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 246,
    "id": "074a3c50",
    "metadata": {},
    "outputs": [],
@@ -396,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 247,
    "id": "8ed130f1",
    "metadata": {},
    "outputs": [],
@@ -412,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 248,
    "id": "baf2d1e3",
    "metadata": {},
    "outputs": [
@@ -437,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 249,
    "id": "d6bc699e",
    "metadata": {},
    "outputs": [],
@@ -447,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 250,
    "id": "291017db",
    "metadata": {},
    "outputs": [],
@@ -457,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 251,
    "id": "8ec22807-d029-4789-9909-28d634a33cba",
    "metadata": {},
    "outputs": [
@@ -493,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 252,
    "id": "d5ba83de",
    "metadata": {},
    "outputs": [
@@ -627,7 +627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 253,
    "id": "333803d7",
    "metadata": {},
    "outputs": [
@@ -675,7 +675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 254,
    "id": "cc9a150d",
    "metadata": {},
    "outputs": [],
@@ -685,7 +685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 255,
    "id": "cd674c35",
    "metadata": {},
    "outputs": [],
@@ -705,7 +705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 256,
    "id": "8ae00973",
    "metadata": {},
    "outputs": [],
@@ -719,7 +719,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 257,
    "id": "6bc913ea",
    "metadata": {},
    "outputs": [],
@@ -748,7 +748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 258,
    "id": "c95b4cad",
    "metadata": {},
    "outputs": [
@@ -766,7 +766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 259,
    "id": "59a820dd",
    "metadata": {},
    "outputs": [
@@ -835,7 +835,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 260,
    "id": "b97bac44",
    "metadata": {},
    "outputs": [],
@@ -875,13 +875,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 261,
    "id": "42dd91c3",
    "metadata": {},
    "outputs": [],
    "source": [
     "#// BEGIN_TODO [STEP_6] Implement calibration methods (1 point)\n",
-    "\n",
+    "from sklearn.utils.validation import check_X_y\n",
+    "from sklearn.linear_model import LogisticRegression\n",
     "# Calibration method #1: Platt Scaling (assumes binary classification)\n",
     "class PlattScaling(BaseEstimator,ClassifierMixin):\n",
     "    def __init__(self):\n",
@@ -898,31 +899,43 @@
     "\n",
     "    def predict_proba(self,p):\n",
     "\n",
-    "        return self.calibrator.predict_proba(p.reshape(-1,1)).astype(np.float32)\n",
+    "        return self.calibrator.predict_proba(p.reshape(-1,1)).astype(np.float32)[:,1]\n",
     "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 262,
    "id": "a1c10605",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.10000018, 0.10000018, 0.10000018, ..., 0.10000018, 0.10000018,\n",
+       "       0.10000018], dtype=float32)"
+      ]
+     },
+     "execution_count": 262,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "Platt = PlattScaling()\n",
     "\n",
     "Platt.fit(probabilities_train,y_binary_train)\n",
     "\n",
-    "platt_prob_not_shaped = Platt.predict_proba(probabilities)\n",
+    "platt_prob = Platt.predict_proba(probabilities)\n",
     "binary_calibrators = [Platt]\n",
-    "platt_prob = platt_prob_not_shaped[:,1]"
+    "platt_prob"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
-   "id": "52523556-a645-4b9b-90ec-efff74d0d203",
+   "execution_count": 263,
+   "id": "3cfe798b-50c7-4efb-aa53-072dc885ecea",
    "metadata": {},
    "outputs": [
     {
@@ -931,7 +944,7 @@
        "dtype('float32')"
       ]
      },
-     "execution_count": 120,
+     "execution_count": 263,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -942,7 +955,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 264,
+   "id": "669ed44e-d739-4052-a394-840a970e8dd7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.10000014, 0.10000018], dtype=float32)"
+      ]
+     },
+     "execution_count": 264,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.unique(platt_prob)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 265,
+   "id": "52523556-a645-4b9b-90ec-efff74d0d203",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dtype('float32')"
+      ]
+     },
+     "execution_count": 265,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "platt_prob.dtype"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 266,
    "id": "a04e630e-f2f7-415b-adb3-2a7d5d28f78d",
    "metadata": {},
    "outputs": [
@@ -952,7 +1007,7 @@
        "(2065,)"
       ]
      },
-     "execution_count": 121,
+     "execution_count": 266,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -963,7 +1018,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 267,
    "id": "2bdb6d81",
    "metadata": {},
    "outputs": [],
@@ -983,7 +1038,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 268,
    "id": "8fac6439",
    "metadata": {},
    "outputs": [
@@ -992,7 +1047,7 @@
      "output_type": "stream",
      "text": [
       "Uncalibrated LogLoss: 1663.9690433386622\n",
-      "Calibrated LogLoss: 1.8657965522136082\n"
+      "Calibrated LogLoss: 1663.9690294769139\n"
      ]
     }
    ],
@@ -1010,7 +1065,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 269,
    "id": "ba6c8daf",
    "metadata": {},
    "outputs": [],
@@ -1020,7 +1075,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 270,
    "id": "16c84a22",
    "metadata": {},
    "outputs": [],
@@ -1040,7 +1095,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 271,
    "id": "5394811a",
    "metadata": {},
    "outputs": [],
@@ -1067,7 +1122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 272,
    "id": "7fc63ef0",
    "metadata": {},
    "outputs": [
@@ -1075,7 +1130,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Calibrated LogLoss: 1.6101473787209652\n"
+      "Calibrated LogLoss: 780.9148237940291\n"
      ]
     }
    ],
@@ -1098,7 +1153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 273,
    "id": "80e6e1c0",
    "metadata": {},
    "outputs": [],
@@ -1108,7 +1163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 274,
    "id": "9220eaf3",
    "metadata": {},
    "outputs": [],
@@ -1132,7 +1187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 275,
    "id": "ea1df57d",
    "metadata": {},
    "outputs": [],
@@ -1143,14 +1198,14 @@
     "binary_calibrator = PlattScaling()\n",
     "binary_calibrator.fit(p_calib_train,y_calib_train)\n",
     "\n",
-    "q_calib_test = binary_calibrator.predict_proba(p_calib_test)[:,1]\n",
+    "q_calib_test = binary_calibrator.predict_proba(p_calib_test)\n",
     "binary_calibrated_64 = binary_metric.score(y_calib_test,q_calib_test)\n",
     "binary_calibrated = binary_calibrated_64.astype(np.float32)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 276,
    "id": "d46406b3",
    "metadata": {},
    "outputs": [],
@@ -1160,7 +1215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 277,
    "id": "35b07200",
    "metadata": {},
    "outputs": [],
@@ -1184,7 +1239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 278,
    "id": "87c7c4ee",
    "metadata": {},
    "outputs": [],
@@ -1207,20 +1262,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 279,
    "id": "d31676b3",
    "metadata": {},
    "outputs": [],
    "source": [
     "#// BEGIN_TODO [LEADERBOARD_BINARY] Join the leaderboard\n",
     "\n",
-    "q_binary_leaderboard = binary_calibrator.predict_proba(p_binary_leaderboard)[:,1]\n",
+    "q_binary_leaderboard = binary_calibrator.predict_proba(p_binary_leaderboard)\n",
     "leaderboard_nickname = \"Durum Bois\"\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 280,
    "id": "e217c1ca",
    "metadata": {},
    "outputs": [],
@@ -1238,7 +1293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 281,
    "id": "ca865b54",
    "metadata": {},
    "outputs": [],
@@ -1297,7 +1352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 282,
    "id": "7dc022d4",
    "metadata": {},
    "outputs": [],
@@ -1308,7 +1363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 283,
    "id": "c4561cb2",
    "metadata": {},
    "outputs": [
@@ -1350,7 +1405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 284,
    "id": "068da9cc",
    "metadata": {},
    "outputs": [],
@@ -1360,7 +1415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 285,
    "id": "71968ace",
    "metadata": {},
    "outputs": [],
@@ -1380,7 +1435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 286,
    "id": "4079883a",
    "metadata": {},
    "outputs": [],
@@ -1395,7 +1450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 287,
    "id": "adfa35ca",
    "metadata": {},
    "outputs": [],
@@ -1424,7 +1479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 288,
    "id": "9bb587e5",
    "metadata": {},
    "outputs": [
@@ -1487,7 +1542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 289,
    "id": "b90c41e8",
    "metadata": {},
    "outputs": [],
@@ -1520,7 +1575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 290,
    "id": "08e5cb81",
    "metadata": {},
    "outputs": [],
@@ -1550,7 +1605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 291,
    "id": "bcd020a5",
    "metadata": {},
    "outputs": [],
@@ -1562,7 +1617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 292,
    "id": "81430a92",
    "metadata": {},
    "outputs": [],
@@ -1586,7 +1641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 293,
    "id": "12713a51",
    "metadata": {},
    "outputs": [],
@@ -1604,7 +1659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 294,
    "id": "9d788bcf",
    "metadata": {},
    "outputs": [
@@ -1614,7 +1669,7 @@
        "13.96314371721348"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 294,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1627,7 +1682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 295,
    "id": "f9ab922c",
    "metadata": {},
    "outputs": [],
@@ -1647,7 +1702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 296,
    "id": "968aaf7c",
    "metadata": {},
    "outputs": [],
@@ -1670,7 +1725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 297,
    "id": "163fa92e",
    "metadata": {},
    "outputs": [],
@@ -1683,7 +1738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 298,
    "id": "e5f50859",
    "metadata": {},
    "outputs": [
@@ -1705,7 +1760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 299,
    "id": "14242a4c",
    "metadata": {},
    "outputs": [
@@ -1715,7 +1770,7 @@
        "(1040, 6)"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 299,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1726,7 +1781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 300,
    "id": "2e8fbfe5",
    "metadata": {},
    "outputs": [],
@@ -1744,7 +1799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 301,
    "id": "4fc58b29",
    "metadata": {},
    "outputs": [
@@ -1755,7 +1810,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[94], line 7\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(leaderboard_nickname, \u001b[38;5;28mstr\u001b[39m), \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mleaderboard_nickname is not a string\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m      6\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(q_multiclass_leaderboard, np\u001b[38;5;241m.\u001b[39mndarray), \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mq_multiclass_leaderboard is not an np.ndarray\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m----> 7\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m q_multiclass_leaderboard\u001b[38;5;241m.\u001b[39mshape \u001b[38;5;241m==\u001b[39m p_multiclass_leaderboard\u001b[38;5;241m.\u001b[39mshape, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mq_multiclass_leaderboard has wrong shape\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m      9\u001b[0m \u001b[38;5;66;03m# export the solution to a .json file\u001b[39;00m\n\u001b[1;32m     10\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mleaderboard_multiclass.json\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mw\u001b[39m\u001b[38;5;124m\"\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m file:\n",
+      "Cell \u001b[0;32mIn[301], line 7\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(leaderboard_nickname, \u001b[38;5;28mstr\u001b[39m), \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mleaderboard_nickname is not a string\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m      6\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(q_multiclass_leaderboard, np\u001b[38;5;241m.\u001b[39mndarray), \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mq_multiclass_leaderboard is not an np.ndarray\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m----> 7\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m q_multiclass_leaderboard\u001b[38;5;241m.\u001b[39mshape \u001b[38;5;241m==\u001b[39m p_multiclass_leaderboard\u001b[38;5;241m.\u001b[39mshape, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mq_multiclass_leaderboard has wrong shape\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m      9\u001b[0m \u001b[38;5;66;03m# export the solution to a .json file\u001b[39;00m\n\u001b[1;32m     10\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mleaderboard_multiclass.json\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mw\u001b[39m\u001b[38;5;124m\"\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m file:\n",
       "\u001b[0;31mAssertionError\u001b[0m: q_multiclass_leaderboard has wrong shape"
      ]
     }
