--- a/assignment2/dataset-shift.ipynb
+++ b/assignment2/dataset-shift.ipynb
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "id": "b4efca79-6023-478c-bd24-44feeff89ce3",
    "metadata": {},
    "outputs": [
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "id": "575c8e3d-54e3-40a7-96ff-85b4544120a4",
    "metadata": {},
    "outputs": [
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "id": "a010d37d",
    "metadata": {},
    "outputs": [
@@ -346,18 +346,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Distribution Shift Index: 0\n"
+      "Production Accuracy: 0.26990592571040634\n",
+      "Distribution Shift Index: 16\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'\\nX_train_reshaped = X_train.reshape(len(X_train), -1)\\n\\ndeployed_classifier.fit(X_train_reshaped, y_train)\\n\\nX_production_reshaped = X_production.reshape(len(X_production), -1)\\n\\ny_production_pred = deployed_classifier.predict(X_production_reshaped)\\n\\nproduction_accuracy = accuracy_score(y_production, y_production_pred)\\n\\n# Compute distribution shift using Kolmogorov-Smirnov test\\ndef detect_distribution_shift(data1, data2):\\n    shifts = []\\n    for i in range(data1.shape[1]):\\n        statistic, p_value = ks_2samp(data1[:, i], data2[:, i])\\n        if p_value < 0.05:  # Threshold for significance level\\n            shifts.append(i)\\n    return shifts\\n\\n# Identify distribution shift between training and production data\\nshifted_features = detect_distribution_shift(X_train_reshaped, X_production_reshaped)\\ndistribution_shift_index = None\\nif shifted_features:\\n    # Find the index where the shift occurs\\n    print(\"mert\")\\n    min_length = min(len(X_production_reshaped), len(X_train_reshaped))\\n    for index in range(min_length):\\n        if all(X_production_reshaped[index][i] != X_train_reshaped[index][i] for i in shifted_features):\\n            distribution_shift_index = index\\n            break\\n\\n\\nleaderboard_nickname = \"Group24\"\\n\\n# Output results\\nprint(\"Production Accuracy:\", production_accuracy)\\nprint(\"Shifted Features:\", shifted_features)\\nprint(\"Distribution Shift Index:\", distribution_shift_index)\\n'"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -365,61 +356,36 @@
     "from sklearn.metrics import accuracy_score\n",
     "from scipy.stats import ks_2samp\n",
     "\n",
-    "def detect_distribution_shift(data1, data2):\n",
-    "    min_length = min(len(data1), len(data2))\n",
-    "    for index in range(min_length):\n",
-    "        if data1[index] != data2[index]:\n",
-    "            return index\n",
-    "    return None\n",
-    "\n",
-    "\n",
-    "distribution_shift_index = detect_distribution_shift(y_train,y_production)\n",
-    "print(\"Distribution Shift Index:\", distribution_shift_index)\n",
-    "\"\"\"\n",
-    "X_train_reshaped = X_train.reshape(len(X_train), -1)\n",
+    "X_train_reshaped = X_train.reshape((len(X_train), -1))\n",
     "\n",
     "deployed_classifier.fit(X_train_reshaped, y_train)\n",
     "\n",
-    "X_production_reshaped = X_production.reshape(len(X_production), -1)\n",
+    "X_production_reshaped = X_production.reshape((len(X_production), -1))\n",
     "\n",
     "y_production_pred = deployed_classifier.predict(X_production_reshaped)\n",
     "\n",
     "production_accuracy = accuracy_score(y_production, y_production_pred)\n",
     "\n",
-    "# Compute distribution shift using Kolmogorov-Smirnov test\n",
     "def detect_distribution_shift(data1, data2):\n",
     "    shifts = []\n",
     "    for i in range(data1.shape[1]):\n",
     "        statistic, p_value = ks_2samp(data1[:, i], data2[:, i])\n",
-    "        if p_value < 0.05:  # Threshold for significance level\n",
-    "            shifts.append(i)\n",
-    "    return shifts\n",
-    "\n",
-    "# Identify distribution shift between training and production data\n",
-    "shifted_features = detect_distribution_shift(X_train_reshaped, X_production_reshaped)\n",
-    "distribution_shift_index = None\n",
-    "if shifted_features:\n",
-    "    # Find the index where the shift occurs\n",
-    "    print(\"mert\")\n",
-    "    min_length = min(len(X_production_reshaped), len(X_train_reshaped))\n",
-    "    for index in range(min_length):\n",
-    "        if all(X_production_reshaped[index][i] != X_train_reshaped[index][i] for i in shifted_features):\n",
-    "            distribution_shift_index = index\n",
-    "            break\n",
+    "        if statistic > 0.1 and p_value < 0.1e-10:\n",
+    "            return i\n",
     "\n",
     "\n",
+    "\n",
+    "distribution_shift_index = detect_distribution_shift(X_train_reshaped,X_production_reshaped)\n",
     "leaderboard_nickname = \"Group24\"\n",
     "\n",
-    "# Output results\n",
     "print(\"Production Accuracy:\", production_accuracy)\n",
-    "print(\"Shifted Features:\", shifted_features)\n",
     "print(\"Distribution Shift Index:\", distribution_shift_index)\n",
-    "\"\"\"\n"
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "id": "91836af1",
    "metadata": {},
    "outputs": [],
@@ -437,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "id": "f79b4d7d",
    "metadata": {},
    "outputs": [],
@@ -478,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "c57db702",
    "metadata": {},
    "outputs": [],
@@ -496,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "ddf511da",
    "metadata": {},
    "outputs": [],
@@ -517,19 +483,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "5ddb1c15",
    "metadata": {},
    "outputs": [],
    "source": [
     "#// BEGIN_TODO [PREDICTION]\n",
     "\n",
+    "y_improved_classifier = deployed_classifier.predict(X_leaderboard.reshape(-1, 26*26))\n",
+    "\n",
     "# ===== =====> Replace this line by your code. <===== ===== #\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "4a25860f",
    "metadata": {},
    "outputs": [],
@@ -547,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "88df8a46",
    "metadata": {},
    "outputs": [],
@@ -600,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "7e209271",
    "metadata": {},
    "outputs": [],
@@ -608,7 +576,7 @@
     "#// BEGIN_FEEDBACK [Feedback_1] (0 points)\n",
     "\n",
     "#// END_FEEDBACK [Feedback_1]\n",
-    "\n",
+    "feedback_time = 5\n",
     "import numbers\n",
     "assert isinstance(feedback_time, numbers.Number), \"Please assign a number to variable feedback_time\""
    ]
@@ -625,13 +593,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "c44da128",
    "metadata": {},
    "outputs": [],
    "source": [
     "#// BEGIN_FEEDBACK [Feedback_2] (0 points)\n",
-    "\n",
+    "feedback_difficulty = 7\n",
     "#// END_FEEDBACK [Feedback_2]\n",
     "\n",
     "assert isinstance(feedback_difficulty, numbers.Number), \"Please assign a number to variable feedback_difficulty\""
@@ -651,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "78831b99",
    "metadata": {},
    "outputs": [],
@@ -673,7 +641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "ce04ff18",
    "metadata": {},
    "outputs": [],
@@ -695,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "09c79c04",
    "metadata": {},
    "outputs": [],
