--- a/assignment2/dataset-shift.ipynb
+++ b/assignment2/dataset-shift.ipynb
@@ -347,7 +347,7 @@
      "output_type": "stream",
      "text": [
       "Production Accuracy: 0.26990592571040634\n",
-      "Distribution Shift Index: 16\n"
+      "Distribution Shift Index: 0\n"
      ]
     }
    ],
@@ -373,9 +373,12 @@
     "        if statistic > 0.1 and p_value < 0.1e-10:\n",
     "            return i\n",
     "\n",
+    "def findLabelSchemaChange(y):\n",
+    "    for index, label in enumerate(y):\n",
+    "        if label == -1:\n",
+    "            return index\n",
     "\n",
-    "\n",
-    "distribution_shift_index = detect_distribution_shift(X_train_reshaped,X_production_reshaped)\n",
+    "distribution_shift_index = findLabelSchemaChange(y_production)\n",
     "leaderboard_nickname = \"Group24\"\n",
     "\n",
     "print(\"Production Accuracy:\", production_accuracy)\n",
